--- a/docker/services/tundler-api.service
+++ b/docker/services/tundler-api.service
@@ -5,7 +5,7 @@ Description=Tundler REST API
 [Service]
 Environment=HOME=/root
 Environment=PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
-ExecStart=/usr/local/bin/tundler-api
+ExecStart=/usr/local/bin/tundler-api -c /home/tundler/tundler.yaml
 ExecStartPre=/usr/local/bin/tundler-configure.sh
 PassEnvironment=EXPRESSVPN_ACTIVATION_CODE NORDVPN_TOKEN
 Restart=always
