Add support for Private Internet Access provider

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -20,6 +20,7 @@ FROM ubuntu:24.10
 ARG INSTALL_EXPRESSVPN=true
 ARG INSTALL_MULLVAD=true
 ARG INSTALL_NORDVPN=true
+ARG INSTALL_PIA=true
 ARG INSTALL_TUNDLER_PROXY=true
 
 ENV DEBIAN_FRONTEND=noninteractive
