--- a/docker/services/tundler-api.service
+++ b/docker/services/tundler-api.service
@@ -9,7 +9,7 @@ ExecStart=/usr/local/bin/tundler-api -c /home/tundler/tundler.yaml
 Environment=TUNDLER_NETNS=vpnns
 ExecStartPre=/usr/local/bin/setup-netns.sh
 ExecStartPre=/usr/local/bin/tundler-configure.sh
-PassEnvironment=EXPRESSVPN_ACTIVATION_CODE MULLVAD_ACCOUNT_NUMBER NORDVPN_TOKEN PRIVATEINTERNETACCESS_USERNAME PRIVATEINTERNETACCESS_PASSWORD
+EnvironmentFile=/etc/tundler/env
 Restart=always
 StandardError=journal+console
 StandardOutput=journal+console
