Route Envoy proxy traffic through VPN namespace
- Add envoy user for UID-based iptables policy routing
- Replace sport-based marking with owner match (routes upstream connections)
- Exempt DNS from VPN routing so Envoy uses Docker DNS
- Add Docker subnet route in vpnns to prevent response routing loops
- MASQUERADE forwarded traffic entering VPN tunnel
- Protect resolv.conf via BindPaths instead of chattr +i
- Allow inbound traffic on proxy port 8484

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -39,6 +39,9 @@ RUN useradd -m -s /bin/bash tundler \
     && echo "tundler ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers \
     && chown tundler:tundler /root
 
+# Create dedicated user for Envoy proxy (used for UID-based policy routing)
+RUN useradd -r -s /usr/sbin/nologin envoy
+
 # Install Envoy proxy
 COPY docker/config/envoy.yaml /tmp/envoy.yaml
 RUN if [ "$INSTALL_TUNDLER_PROXY" = "true" ]; then \
